--- a/ui/index.html
+++ b/ui/index.html
@@ -1,10 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>RNL TIMER</title>
-    <script src="script.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/all.css">
+    <link rel="stylesheet" href="style.css">
+    <title>Timer</title>
 </head>
-<body> 
+<body>
+    <p id="test"></p>
+    <p id="timer">00:03:30</p>
+    <div class="timer-setting">
+        <button id="close"><i class="fa-solid fa-xmark"></i></button>
+        <h1 id="timer-title">Timer Setting</h1>
+        <div class="timer-setting-buttons">
+            <button class="setting-button" id="start-toggle">START/STOP</button>
+            <button class="setting-button" id="reset">RESET</button>
+        </div>
+        <div class="timer-setting-bars">
+            <label>
+                <div class="time-number-par">
+                    H: 
+                    <input type="number" class="time-number" id="hours-number" value="0" min="0" max="23">
+                </div>
+                
+                <input type="range" class="time-slider" id="hours-slider" value="0" min="0" max="23">
+            </label><br>
+            <label>
+                <div class="time-number-par">
+                    M: 
+                    <input type="number" class="time-number" id="minutes-number" value="3" min="0" max="59">
+                </div>
+                <input type="range" class="time-slider" id="minutes-slider" value="3" min="0" max="59">
+            </label><br>
+            <label>
+                <div class="time-number-par">
+                    S: 
+                    <input type="number" class="time-number" id="seconds-number" value="30" min="0" max="59">
+                </div>
+                <input type="range" class="time-slider" id="seconds-slider" value="30" min="0" max="59">
+            </label><br>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
